--- a/src/components/MovieItem/index.css
+++ b/src/components/MovieItem/index.css
@@ -1,4 +1,5 @@
 /* Write your CSS here */
+
 .thumbnail {
   width: 215px;
   height: 150px;
@@ -39,8 +40,7 @@
   outline: none;
   cursor: pointer;
 }
-
-.movie-player-container {
+.react-player-container {
   margin-top: 12px;
   margin-left: 48px;
   margin-bottom: 48px;
